# qfv

./: Makefile.am  configure.ac
data/: Makefile.am
src/: Makefile.am  qfv-module-manager.c  qfv-module-manager.h  qfv-parse.c  qfv-parse.h  qfv-window.c  qfv-window.h  qfv.c
src/libqfv/: Makefile.am  qfv-module.c  qfv-module.h  qfv-plugin.c  qfv-plugin.h
src/modules/: Makefile.am  qfv-md5sum-plugin.c
